--- a/install_apache.yml
+++ b/install_apache.yml
@@ -3,6 +3,10 @@
   become: true
   tasks:
 
-  - name: install randomnameiancute package
+  - name: update repository index
+    apt:
+      update_cache: yes
+
+  - name: install apache2 package
     apt:
       name: apache2
