--- a/install_apache.yml
+++ b/install_apache.yml
@@ -10,3 +10,7 @@
   - name: install apache2 package
     apt:
       name: apache2
+
+  - name: add PHP support for apache
+    apt:
+      name: libapache2-mod-php
