--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,16 +1,13 @@
 ---
-- hosts: all
-  become: true
-  tasks:
 
-  - name: update repository index
-    apt:
-      update_cache: yes
+ - hosts: all
+   become: true
+   tasks:
 
-  - name: install apache2 package
-    apt:
-      name: apache2
-
-  - name: add PHP support for apache
-    apt:
-      name: libapache2-mod-php
+   - name: install apache and php package
+     package:
+       name:
+         - "{{ apache_package }}"
+         - "{{ php_package }}"
+       state: latest
+       update_cache: yes
