--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,15 +4,10 @@
    become: true
    tasks:
 
-#   - name: install apache and php package
-#     package:
-#       name:
-#         - "{{ apache_package }}"
-#         - "{{ php_package }}"
-#       state: latest
-#       update_cache: yes
-
-   - shell: echo 'Bello'
-     register: nouser
-   -  debug:
-            msg= "Ansible Managed node by {{ nouser.stdout}}"
+   - name: install apache and php package
+     package:
+       name:
+         - "{{ apache_package }}"
+         - "{{ php_package }}"
+       state: latest
+       update_cache: yes
