--- a/site.yml
+++ b/site.yml
@@ -1,95 +1,45 @@
 ---
 
-- hosts: all
-  become: true
-  pre_tasks:
+ - hosts: all
+   become: true
+   pre_tasks:
 
-  - name: install updates (CentOS)
-    tags: always
-    dnf:
-      update_only: yes
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
+   - name: update repository index (CentOS)
+     tags: always
+     dnf:
+       update_cache: yes
+     changed_when: false
+     when: ansible_distribution == "CentOS"
 
-  - name: install updates (Ubuntu)
-    tags: always
-    apt:
-      upgrade: dist
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
+   - name: update repository index (Ubuntu)
+     tags: always
+     apt:
+       update_cache: yes
+     changed_when: false
+     when: ansible_distribution == "Ubuntu"
 
-- hosts: web_servers
-  become: true
-  tasks:
+ - hosts: all
+   become: true
+   roles:
+     - base
 
-  - name: install apache and php for Ubuntu servers
-    tags: apache,apache2,ubuntu
-    apt:
-      name:
-        - apache2
-        - libapache2-mod-php
-      state: latest
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
+ - hosts: workstations
+   become: true
+   roles:
+     - workstations
 
-  - name: install apache and php for CentOS servers
-    tags: apache,centos,httpd
-    dnf:
-      name:
-        - httpd
-        - php
-      state: latest
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
+ - hosts: web_servers
+   become: true
+   roles:
+     - web_servers
 
-  - name: start httpd (CentOS)
-    tags: apache,centos,httpd
-    service:
-      name: httpd
-      state: started
-      enabled: true
-    when: ansible_distribution == "CentOS"
+ - hosts: db_servers
+   become: true
+   roles:
+     - db_servers
 
-  - name: copy default html file for site
-    tags: apache, apache2, httpd
-    copy:
-      src: default_site.html
-      dest: /var/www/html/index.html
-      owner: root
-      group: root
-      mode: 0644
+ - hosts: file_servers
+   become: true
+   roles:
+     - file_servers
 
-
-- hosts: db_servers
-  become: true
-  tasks:
-
-  - name: install mariadb package (CentOS)
-    tags: centos,db,mariadb
-    dnf:
-      name: mariadb-server
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: install mariadb package (Ubuntu)
-    tags: db,mariadb,ubuntu
-    apt:
-      name: mariadb-server
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: Mariadb- Restarting/Enabling
-    service:
-      name: mariadb
-      state: restarted
-      enabled: true
-
-- hosts: file_servers
-  become: true
-  tasks:
-
-  - name: install samba package
-    tags: samba
-    package:
-      name: samba
-      state: latest
